@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_map.h,v 1.16 2007-07-17 19:50:43 guru Exp $
+ *	$Id: gmt_map.h,v 1.17 2007-08-21 19:37:39 guru Exp $
  *
  *	Copyright (c) 1991-2007 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -78,5 +78,6 @@ EXTERN_MSC int GMT_distances (double x[], double y[], int n, double scale, int d
 EXTERN_MSC int GMT_map_loncross (double lon, double south, double north, struct GMT_XINGS **xings);
 EXTERN_MSC int GMT_map_latcross (double lat, double west, double east, struct GMT_XINGS **xings);
 EXTERN_MSC BOOLEAN GMT_set_greenwich (int mode);
+EXTERN_MSC int GMT_UTMzone_to_wesn (int zone_x, int zone_y, int hemi, double *w, double *e, double *s, double *n);
 
 #endif /* _GMT_MAP_H */
