@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_project.h,v 1.50 2007-08-11 04:22:07 guru Exp $
+ *	$Id: gmt_project.h,v 1.51 2007-08-21 19:37:39 guru Exp $
  *
  *	Copyright (c) 1991-2007 by P. Wessel and W. H. F. Smith
  *	See COPYING file for copying and redistribution conditions.
@@ -178,6 +178,8 @@ struct GMT_MAP_PROJECTIONS {
 	double t_i1, t_i2, t_i3, t_i4, t_i5;
 	double t_r, t_ir;		/* Short for project_info.EQ_RAD * gmtdefs.map_scale_factor and its inverse */
 	int utm_hemisphere;	/* -1 for S, +1 for N, 0 if to be set by -R */
+	int utm_zonex;		/* The longitude component 1-60 */
+	int utm_zoney;		/* The latitude component A-Z */
 	
 	/* Lambert Azimuthal Equal-Area Projection */
 	
